Encountered first bug. Entire home section is collapsing under Nav

--- a/Frontend/Style/_nav.scss
+++ b/Frontend/Style/_nav.scss
@@ -1,5 +1,4 @@
-// Import Bootstrap variables
-@import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css";
+
 
 // Navbar Styling
 
@@ -9,8 +8,7 @@
   left: 0;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
-  z-index: 1000;
-
+  border-bottom: 1px solid var(--secondary-text);
   button i {
     color: var(--secondary-base-color);
   }
@@ -53,11 +51,12 @@
   width: 100%;
   box-shadow: 0 0.125rem 1.75rem 0 rgba(242, 97, 63, 0.5);
   transition: all 0.15s ease-in-out 0s;
+  border-bottom: none;
 }
 
 // Change container and nav-links color when the toggle button is showing
 .navigation-wrap.menu-open {
-  background-color: var(--primary-text);
+  background: linear-gradient(135deg, #ffffff, #f0f0f0);
   transition: background-color 0.3s ease-in-out;
 
   .nav-item {
@@ -72,7 +71,4 @@
       }
     }
   }
-}
-.demo {
-  height:1000px;
 }
