--- a/Frontend/Style/main.scss
+++ b/Frontend/Style/main.scss
@@ -1,5 +1,8 @@
 @import "nav";
+@import "home";
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Quicksand:wght@300..700&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap");
 
 * {
   margin: 0;
@@ -20,32 +23,87 @@
   --secondary-text: #b3b3b3;
   --primary-base-color: #f2613f;
   --secondary-base-color: #fc512a;
+  --primary-font: "Josefin Sans", sans-serif;
+  --secondary-font: "Montserrat Alternates", serif;
 }
 
 html {
   scroll-behavior: smooth;
   body {
     font-size: 100%;
-    font-family: "Josefin Sans", sans-serif;
     background: linear-gradient(135deg, #000000, #2c2c2c, #312c2c);
+    font-family: var(--primary-font);
     #networkCanvas {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 1920px;  /* Fixed Width */
-    height: 1080px; /* Fixed Height */
-      z-index: -1;  /* Make sure it's behind all content */
-      pointer-events: none;  /* Prevent interaction with canvas */
+      width: 1920px; /* Fixed Width */
+      height: 1080px; /* Fixed Height */
+      z-index: -1; /* Make sure it's behind all content */
+      pointer-events: none; /* Prevent interaction with canvas */
       display: block;
-      margin-top: 60px;  /* Adjust to make space for navbar */
+      margin-top: 70px; /* Adjust to make space for navbar */
+    }
+    h1 {
+      font-size: 3rem;
+      font-weight: 900;
+      color: var(--primary-text);
+    }
+
+    h2 {
+      font-weight: 700;
+      font-size: 2.25rem;
+    }
+
+    h4 {
+      font-size: 1.5rem;
+      font-weight: 400;
+      line-height: 3rem;
+      color: var(--secondary-text);
+      text-align: justify;
+    }
+
+    h5 {
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+    h6 {
+      font-size: 0.9rem;
+      font-weight: 700;
+    }
+    p {
+      font-weight: 400;
+      line-height: 2rem;
+      letter-spacing: 1px;
+      text-align: justify;
     }
   }
-
 }
 
+/* Button properties */
+%button {
+  font-family: var(--secondry-font);
+  font-weight: 800;
+  font-size: 1.025rem;
+  letter-spacing: 0.05rem;
+  padding: 0.7rem 1.3rem;
+  border-radius: 0;
+  box-shadow: 0px 2px 10px -1px rgba(255, 255, 255, 0.308);
+  -webkit-transition: all 0.4s ease-out 0s;
+  -o-transition: all 0.4s ease-out 0s;
+  -moz-transition: all 0.4s ease-out 0s;
+  transition: all 0.4s ease-out 0s;
+}
 
-
-
+%transparent-button {
+  background: none;
+  color: var(--secondary-base-color);
+  border: 2px solid var(--secondary-base-color);
+  @extend %button;
+  &:hover {
+    color: var(--primary-text);
+    background: none;
+    background-color: var(--secondary-base-color);
+  }
+}
 // Custom Scrollbar
 ::-webkit-scrollbar {
   width: 0.625rem;
